--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get -y install ninja-build
 install:
 # Install conan
-  - pip install conan
+  - pip install conan --build missing
 # Automatic detection of your arch, compiler, etc.
   - conan user
 script:
