--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - sudo apt-get -y install ninja-build
 install:
 # Install conan
-  - pip install conan --build missing
+  - pip install conan
 # Automatic detection of your arch, compiler, etc.
   - conan user
 script:
@@ -16,5 +16,5 @@ script:
   - rm -rf build
   - mkdir build
   - cd build
-  - conan install .. -s compiler.version='9' -s compiler.libcxx='libstdc++11' -s compiler.cppstd='20'
+  - conan install .. -s compiler.version='9' -s compiler.libcxx='libstdc++11' -s compiler.cppstd='20' --build missing
   - conan build ..
