--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,11 +4,15 @@ platform: x64
 
 image: Visual Studio 2019
 
+environment:
+  CONAN_RUN_TESTS: 1
+  PYTHON: "C:\\Python37"
+
 install:
   - cmd: echo "Downloading conan..."
   - cmd: set PATH=%PATH%;%PYTHON%/Scripts/
-  - cmd: pip.exe install conan
-  - cmd: pip.exe install conan_package_tools
+  - cmd: pip3.exe install conan
+  - cmd: pip3.exe install conan_package_tools
   - cmd: conan user # Create the conan data directory
   - cmd: conan --version
   - cmd: conan --profile --detect
