--- a/.travis.yml
+++ b/.travis.yml
@@ -29,13 +29,16 @@ matrix:
       env: CONAN_CLANG_VERSIONS=9 CONAN_DOCKER_IMAGE=conanio/clang9
 
 install:
-  - cmake --version
   - pip3 install --upgrade pip
   - pip3 install -U conan_package_tools
   - conan user
   - if [ "${VARIANT}" == "coverage" ]; then (
-      pip3 install gcovr
+      pip3 install gcovr &&
+      CMAKE_URL="https://cmake.org/files/LatestRelease/cmake-3.17.0-Linux-x86_64.tar.gz" &&
+      mkdir cmake && travis_retry wget --quiet -O - ${CMAKE_URL} | tar --strip-components=1 -xz -C cmake &&
+      export PATH=${DEPS_DIR}/cmake/bin:${PATH}
     ); fi
+  - cmake --version
 
 script:
   - if [ "${VARIANT}" == "coverage" ]; then (
@@ -49,7 +52,7 @@ script:
   - if [ "$TRAVIS_OS_NAME" == "osx" ]; then (
       mkdir build && cd build &&
       conan install .. -b missing &&
-      cmake .. -G "Ninja" -DCMAKE_BUILD_TYPE=RELEASE -D CMAKE_MODULE_PATH=$PWD &&
+      cmake -DCMAKE_BUILD_TYPE=RELEASE -D CMAKE_MODULE_PATH=$PWD .. &&
       cmake build .. && ctest .. 
     ); fi
   - if(["$TRAVIS_OS_NAME" == "linux"] && [${VARIANT} != "coverage"]); then (
