--- a/.travis.yml
+++ b/.travis.yml
@@ -41,12 +41,12 @@ install:
       CMAKE_VERSION=cmake-3.17.0-Linux-x86_64 &&
       CMAKE_URL="https://cmake.org/files/LatestRelease/${CMAKE_VERSION}.tar.gz" &&
       wget -q ${CMAKE_URL} && tar xf ${CMAKE_VERSION}.tar.gz &&
-      export PATH=$TRAVIS_BUILD_DIR/${CMAKE_VERSION}/bin:${PATH}
+      export PATH=${TRAVIS_BUILD_DIR}/${CMAKE_VERSION}/bin:${PATH}
     ); fi
   - cmake --version
 
 script:
-  - if [ "$TRAVIS_JOB_NAME" == "Coverage" ]; then (
+  - if [ "${TRAVIS_JOB_NAME}" == "Coverage" ]; then (
       mkdir build && cd build &&
       conan install .. -b missing -s compiler=gcc -s compiler.version=9 -s compiler.libcxx=libstdc++11 -s compiler.cppstd=20 &&
       cmake -G "Unix Makefiles" -D CMAKE_MODULE_PATH=$PWD -D CMAKE_C_COMPILER=gcc-9 -D CMAKE_CXX_COMPILER=g++-9 -D CMAKE_BUILD_TYPE=DEBUG .. &&
@@ -54,13 +54,13 @@ script:
       gcovr -r .. --branches --gcov-executable ${GCOV} --html > coverage.html
       bash <(curl -s https://codecov.io/bash) -x "${GCOV}"
     ); fi
-  - if [ "$TRAVIS_OS_NAME" == "osx" ]; then (
+  - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then (
       mkdir build && cd build &&
       conan install .. -b missing &&
       cmake -DCMAKE_BUILD_TYPE=RELEASE -D CMAKE_MODULE_PATH=$PWD .. &&
       cmake --build . && ctest .
     ); fi
-  - if ["$TRAVIS_JOB_NAME" == "Linux"]; then (
+  - if [ "${TRAVIS_JOB_NAME}" == "Linux" ]; then (
       python3 .travis_build.py
     ); fi
 
