--- a/.travis.yml
+++ b/.travis.yml
@@ -41,7 +41,8 @@ install:
       CMAKE_VERSION=cmake-3.17.0-Linux-x86_64 &&
       CMAKE_URL="https://cmake.org/files/LatestRelease/${CMAKE_VERSION}.tar.gz" &&
       wget -q ${CMAKE_URL} && tar xf ${CMAKE_VERSION}.tar.gz &&
-      export PATH=${TRAVIS_BUILD_DIR}/${CMAKE_VERSION}/bin:${PATH}
+      export PATH=${TRAVIS_BUILD_DIR}/${CMAKE_VERSION}/bin:${PATH} &&
+      echo ${PATH} && echo ${TRAVIS_BUILD_DIR}/${CMAKE_VERSION}/bin && ls
     ); fi
   - cmake --version
 
