Trying to update CMake on Travis for the 100th time

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,18 +32,18 @@ matrix:
       name: "MacOS"
       env: CONAN_CLANG_VERSIONS=9 CONAN_DOCKER_IMAGE=conanio/clang9
 
+before_install:
+  - mkdir $HOME/usr
+  - export PATH="$HOME/usr/bin:$PATH"
+  - wget https://cmake.org/files/LatestRelease/cmake-3.17.0-Linux-x86_64.sh
+  - chmod +x cmake-3.7.2-Linux-x86_64.sh
+  - ./cmake-3.7.2-Linux-x86_64.sh --prefix=$HOME/usr --exclude-subdir --skip-license
+  - cmake --version
+
 install:
   - pip3 install --upgrade pip
   - pip3 install -U conan_package_tools
   - conan user
-  - if [ "${VARIANT}" == "coverage" ]; then (
-      pip3 install gcovr &&
-      CMAKE_VERSION=cmake-3.17.0-Linux-x86_64 &&
-      CMAKE_URL="https://cmake.org/files/LatestRelease/${CMAKE_VERSION}.tar.gz" &&
-      wget -q ${CMAKE_URL} && tar xf ${CMAKE_VERSION}.tar.gz &&
-      export PATH=${TRAVIS_BUILD_DIR}/${CMAKE_VERSION}/bin:${PATH} &&
-      echo ${PATH} && echo ${TRAVIS_BUILD_DIR}/${CMAKE_VERSION}/bin && ls
-    ); fi
   - cmake --version
 
 script:
