--- a/.travis.yml
+++ b/.travis.yml
@@ -27,22 +27,26 @@ matrix:
           packages:
             - g++-9
             - gcc-9
+            - gcov-9
             - libstdc++-9-dev
     - <<: *osx
       name: "MacOS"
       env: CONAN_CLANG_VERSIONS=9 CONAN_DOCKER_IMAGE=conanio/clang9
 
 before_install:
-  - mkdir $HOME/usr
-  - export PATH="$HOME/usr/bin:$PATH"
-  - wget https://cmake.org/files/LatestRelease/cmake-3.17.0-Linux-x86_64.sh
-  - chmod +x cmake-3.17.0-Linux-x86_64.sh
-  - ./cmake-3.17.0-Linux-x86_64.sh --prefix=$HOME/usr --exclude-subdir --skip-license
+  - if [ "${TRAVIS_OS_NAME}" == "linux" ]; then (
+    mkdir $HOME/usr &&
+    export PATH="$HOME/usr/bin:$PATH" &&
+    wget https://cmake.org/files/LatestRelease/cmake-3.17.0-Linux-x86_64.sh &&
+    chmod +x cmake-3.17.0-Linux-x86_64.sh &&
+    ./cmake-3.17.0-Linux-x86_64.sh --prefix=$HOME/usr --exclude-subdir --skip-license
+    ); fi
   - cmake --version
 
 install:
   - pip3 install --upgrade pip
   - pip3 install -U conan_package_tools
+  - pip3 install gcovr
   - conan user
   - cmake --version
 
@@ -52,7 +56,6 @@ script:
       conan install .. -b missing -s compiler=gcc -s compiler.version=9 -s compiler.libcxx=libstdc++11 -s compiler.cppstd=20 &&
       cmake -G "Unix Makefiles" -D CMAKE_MODULE_PATH=$PWD -D CMAKE_C_COMPILER=gcc-9 -D CMAKE_CXX_COMPILER=g++-9 -D CMAKE_BUILD_TYPE=DEBUG .. &&
       cmake --build . && ctest . &&
-      gcovr -r .. --branches --gcov-executable ${GCOV} --html > coverage.html
       bash <(curl -s https://codecov.io/bash) -x "${GCOV}"
     ); fi
   - if [ "${TRAVIS_OS_NAME}" == "osx" ]; then (
