--- a/.github/workflows/cmake.yaml
+++ b/.github/workflows/cmake.yaml
@@ -1,10 +1,11 @@
 ﻿name: CMake
-
 on:
   push:
-    branches: [ $default-branch ]
+    branches:
+    - master
   pull_request:
-    branches: [ $default-branch ]
+    branches:
+    - master
 jobs:
   build:
     name: ${{ matrix.config.name }} ${{ matrix.build_type }} [downcast=${{ matrix.downcast_mode }}]
